Refactor CleanroomMachine and MaintenanceHatchPartMachine for improved readability and tool belt integration